syntax = "proto3";

import "user.proto";
import "google/protobuf/timestamp.proto";

package backend;

service Orders {
  rpc Add (Order) returns (Order) {}
  rpc Get (OrderRequest) returns (Order) {}
  rpc Update (Order) returns (Order) {}
  rpc Delete (OrderRequest) returns (Order) {}
  rpc ListByPositon (Position) returns (stream Order) {}
  rpc ListByUser (User) returns (OrderList) {}  
  rpc SignAlipay (Order) returns (SignReply) {} //fee required
}

message Order {
  string id = 1;  
  //freight type
  string type = 2;
  Position from = 3;
  repeated Position tos = 4;
  float fee = 5;
  Sender sender = 6;
  map<string,string> annotations = 7;
  google.protobuf.Timestamp created = 8;
  string driverId = 9;
  string status = 10;
  string comment = 11;
  PayInfo payInfo = 12;
}

message Position {
  string name = 1;
  string location = 2;
  string address = 3;
}

message Sender {
  string id = 1;
  string name = 2;
  string tel = 3;
}

message OrderRequest {
  string id = 1;
}

message OrderList {
  repeated Order items = 1;
}

message SignReply {
  string signed = 1;
}

message PayInfo {
  //alipay|weixin
  string type = 1;
  string payResult = 2;
}